<resources>
    <string name="app_name">kim_j-project6</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_place">Add Place</string>
    <string name="location">Location</string>
    <string name="place">Place</string>
    <string name="textview">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="longitude">Longitude</string>
    <string name="comma">,</string>
    <string name="latitude">Latitude</string>
    <string name="description">Description</string>
    <string name="add_rating">Add Rating</string>
    <string name="mark_as_visited">Mark as Visited</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="enter_rating_0_10">Enter Rating (0-10)</string>
    <string name="submit">Submit</string>
    <string name="already_visited">Already Visited</string>
    <string name="toggle_app_theme">Toggle App Theme</string>
    <string name="line">______________________</string>
</resources>