<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/add_place_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/place"
        android:inputType="text" />

    <EditText
        android:id="@+id/add_description_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/description"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/lat_text"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:hint="@string/latitude"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/comma" />

        <EditText
            android:id="@+id/lng_text"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:hint="@string/longitude"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>
