<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/rating_input"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:hint="@string/enter_rating_0_10"
        android:inputType="numberDecimal"
        android:maxLength="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_rating_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submit_rating_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>
