<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/textview"
            android:padding="8dp" />

        <TextView
            android:id="@+id/details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="24sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/details_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="24sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/details_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="24sp"
            android:padding="8dp" />

        <Button
            android:id="@+id/addRatingButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add_rating" />

        <Button
            android:id="@+id/addToFavoritesButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorites" />

        <Button
            android:id="@+id/markVisitedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_visited" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>